# ocypode

./: .gitignore  Cargo.toml  README.md  TELEMETRY_FILE_FORMAT.md  dist-workspace.toml
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
.kiro/specs/intermediate-telemetry-representation/: design.md  requirements.md  tasks.md
benches/: telemetry_performance.rs
docs/: ACC_SETUP_GUIDE.md  ANALYZER_CONFIGURATION.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  RECOMMENDATION_PRIORITIZATION.md  SETUP_ASSISTANT.md  TELEMETRY_FILE_FORMAT.md  UI_RECOMMENDATION_DISPLAY.md
proptest-regressions/telemetry/: entry_oversteer_analyzer.txt  tire_temperature_analyzer.txt
src/: errors.rs  lib.rs  main.rs  writer.rs
src/analysis/: mod.rs
src/live/: alerts_view.rs  config.rs  mod.rs  telemetry_view.rs
src/setup_assistant/: mod.rs  recommendation_tests.rs  recommendations.rs
src/telemetry/: bottoming_out_analyzer.rs  brake_lock_analyzer.rs  collector.rs  entry_oversteer_analyzer.rs  mid_corner_analyzer.rs  mod.rs  producer.rs  scrub_analyzer.rs  short_shifting_analyzer.rs  slip_analyzer.rs  tire_temperature_analyzer.rs  trailbrake_steering_analyzer.rs  wheelspin_analyzer.rs
src/track_metadata/: mod.rs  storage.rs  svg_generator.rs  types.rs
src/ui/: corner_annotation.rs  mod.rs
src/ui/analysis/: data_types.rs  developer_ui.rs  mod.rs  telemetry_loader.rs
src/ui/live/: alerts_view.rs  config.rs  mod.rs  setup_window.rs  telemetry_view.rs
telemetry_samples/: acc_spa_aston.jsonl  summit_point.jsonl
tests/: integration_test.rs  performance_test.rs  track_metadata_integration.rs
wix/: main.wxs
