[package]
name = "ocypode"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/sapessi/ocypode"

[dependencies]
clap = { version = "4.5.29", features = [ "derive" ] }
ctrlc = "3.4.5" 
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
serde = "1.0.217"
serde_json = "1.0.138"
simple_moving_average = "1.0.2"
snafu = "0.8.5"

egui_plot = { git="https://github.com/sapessi/egui_plot.git", branch="gradient_line" }
simetry = { version = "0.2.3", default-features = false }
tokio = { version = "1", features = ["rt"] }
uom = "0.34"
itertools = "0.14.0"
dirs = "6.0.0"
log = "0.4.26"
colog = "1.3.0"
serde-jsonlines = "0.7.0"
egui-dropdown = "0.13.0"

[dev-dependencies]
proptest = "1.5.0"
tempfile = "3.14.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
