[package]
name = "ocypode"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/sapessi/ocypode"

[[bin]]
name = "ocypode"
path = "src/main.rs"

[lib]
name = "ocypode"
path = "src/lib.rs"

[dependencies]
# shell utils
clap = { version = "4.5.53", features = [ "derive" ] }
ctrlc = "3.4.5"

# gui framework
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = { version = "0.33.2", features = ["all_loaders"] }
egui_plot = "0.34.0"
egui-dropdown = { git="https://github.com/sapessi/egui-dropdown.git", branch="egui-0.33" }

# serialization
serde = "1.0.217"
serde_json = "1.0.138"
serde-jsonlines = "0.7.0"

# Other utilities
simple_moving_average = "1.0.2"
snafu = "0.8.5"
simetry = { version = "0.2.3", default-features = false }
tokio = { version = "1", features = ["rt"] }
uom = "0.34"
itertools = "0.14.0"
dirs = "6.0.0"
log = "0.4.26"
colog = "1.3.0"

[dev-dependencies]
proptest = "1.5.0"
tempfile = "3.14.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "telemetry_performance"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
